--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@nguniversal/express-engine": "v8.2.6",
     "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
     "bootstrap": "^4.5.2",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "ts-loader": "^8.0.3",
     "tslib": "^1.10.0",
@@ -59,5 +60,9 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
     "webpack-cli": "^3.1.0"
+  },
+  "engines": {    
+    "node": "12.4.1",
+    "npm": "6.13.4"
   }
 }
