--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "xt-assginment",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -62,7 +62,7 @@
     "webpack-cli": "^3.1.0"
   },
   "engines": {    
-    "node": "12.4.1",
+    "node": "14",
     "npm": "6.13.4"
   }
 }
